# pulpino

./: .gitignore  README.md  SIM.md  generate-scripts.py  ips_list.yml  update-ips.py
fpga/: Makefile  README.md  xilinx_2015_1.sh  xilinx_2019_1.sh
fpga/pulpino-icbv1board/: Makefile  fpga-settings.mk
fpga/pulpino-icbv1board-2019/ips/xilinx_clock_manager/tcl/: run.tcl
fpga/pulpino-icbv1board-2019/ips/xilinx_fp_fma/tcl/: run.tcl
fpga/pulpino-icbv1board-2019/ips/xilinx_mem_32768x32/tcl/: run.tcl
fpga/pulpino-icbv1board-2019/ips/xilinx_mem_32768x32_dp/: Makefile
fpga/pulpino-icbv1board-2019/ips/xilinx_mem_32768x32_dp/tcl/: run.tcl
fpga/pulpino-icbv1board-2019/ips/xilinx_mem_8192x32/tcl/: run.tcl
fpga/pulpino-icbv1board-2019/pulpino/: constraints.xdc
fpga/pulpino-icbv1board-2019/pulpino/tcl/: run.tcl
fpga/pulpino-icbv1board-2019/rtl/: pulpemu_top.v  pulpino_wrap.v
fpga/pulpino-icbv1board/ips/xilinx_clock_manager/tcl/: run.tcl
fpga/pulpino-icbv1board/ips/xilinx_fp_fma/tcl/: run.tcl
fpga/pulpino-icbv1board/ips/xilinx_mem_32768x32/tcl/: run.tcl
fpga/pulpino-icbv1board/ips/xilinx_mem_32768x32_dp/tcl/: run.tcl
fpga/pulpino-icbv1board/ips/xilinx_mem_8192x32/tcl/: run.tcl
fpga/pulpino-icbv1board/pulpino/: constraints.xdc
fpga/pulpino-icbv1board/pulpino/tcl/: run.tcl
fpga/pulpino-icbv1board/rtl/: pulpino_wrap.sv
fpga/pulpino-zedboard/: Makefile  fpga-settings.mk
fpga/pulpino-zedboard-2019/ips/xilinx_clock_manager/: Makefile
fpga/pulpino-zedboard-2019/ips/xilinx_clock_manager/tcl/: run.tcl
fpga/pulpino-zedboard-2019/ips/xilinx_fp_fma/: Makefile
fpga/pulpino-zedboard-2019/ips/xilinx_mem_32768x32/: Makefile
fpga/pulpino-zedboard-2019/ips/xilinx_mem_32768x32/tcl/: run.tcl
fpga/pulpino-zedboard-2019/ips/xilinx_mem_32768x32_dp/tcl/: run.tcl
fpga/pulpino-zedboard-2019/ips/xilinx_mem_8192x32/: Makefile
fpga/pulpino-zedboard-2019/ips/xilinx_mem_8192x32/tcl/: run.tcl
fpga/pulpino-zedboard-2019/pulpemu/tcl/: ps7_bd.tcl  run.tcl
fpga/pulpino-zedboard-2019/pulpino/tcl/: run.tcl
fpga/pulpino-zedboard-2019/rtl/: pulpemu_top.v
fpga/pulpino-zedboard/pulpemu/tcl/: run.tcl
fpga/pulpino-zedboard/pulpino/: Makefile
fpga/pulpino-zedboard/pulpino/tcl/: run.tcl  src_files.tcl
fpga/pulpino-zedboard/rtl/: pulpemu_top.v
ips/: .gitignore
process/functional/: vcompile.csh
rtl/: boot_code.sv  clk_rst_gen.sv  core_region.sv  periph_bus_wrap.sv  peripherals.sv  pulpino_top.sv  sp_ram_wrap.sv
rtl/chip_top/: pulpino_pads.sv  pulpino_top_with_pads.sv  pulpino_top_wrapper.sv
rtl/components/: sp_ram_banked.sv
rtl/components/fpga/: cluster_clock_gating.sv  pulp_clock_gating.sv
rtl/components/functional/: pad.sv  sp_ram.sv
rtl/includes/: apb_bus.sv
rtl/user_plugin/: README.md
rtl/user_plugin/rtl/: apb_up.sv  axi_dummy_mstr.sv  axi_mem_word_rd.sv  axi_mem_word_wt.sv  axi_reg_word_rd.sv  axi_reg_word_wt.sv  axi_up.sv  axi_up_ctrl.sv  axi_up_if.sv  test.md  user_plugin.sv
sw/: CMakeLists.txt  cmake_configure.gcc.sh
sw/apps/: CMakeLists.txt  CMakeSim.txt
sw/apps/Arduino_tests/SPI_test/: CMakeLists.txt
sw/apps/bench/: main.c
sw/apps/bench/sha/: CMakeLists.txt  sha_test.c
sw/apps/boot_code/: boot_code.c
sw/apps/fpga/fpga_test/: CMakeLists.txt
sw/apps/fpga/gpio_demo/: CMakeLists.txt
sw/apps/fpga/led_demo/: CMakeLists.txt
sw/apps/freertos/: CMakeLists.txt  FreeRTOSConfig.h  main.c
sw/apps/freertos/Source/: tasks.c
sw/apps/freertos/Source/portable/GCC/RI5CY/: freertos_risc_v_chip_specific_extensions.h  port.c  portASM.S
sw/apps/icbench_tests/: CMakeLists.txt
sw/apps/icbench_tests/SPI_CSN1_test/: CMakeLists.txt  main.c
sw/apps/icbench_tests/SPI_CSN2_test/: CMakeLists.txt  main.c
sw/apps/icbench_tests/SPI_CSN3_test/: CMakeLists.txt  main.c
sw/apps/icbench_tests/SPI_flash_test/: CMakeLists.txt  main.c
sw/apps/icbench_tests/gpio_fast_test/: CMakeLists.txt  main.c
sw/apps/icbench_tests/gpio_test/: CMakeLists.txt  main.c
sw/apps/imperio_tests/testSPIMaster/: CMakeLists.txt  testSPIMaster.c
sw/apps/imperio_tests/testUART/: CMakeLists.txt
sw/apps/must_fail/: CMakeLists.txt  must_fail.c
sw/apps/ram_tests/: CMakeLists.txt
sw/apps/ram_tests/data_mem_test/: CMakeLists.txt  main.c
sw/apps/ram_tests/instr_mem_test/: CMakeLists.txt  main.c
sw/apps/sequential_tests/: CMakeLists.txt
sw/apps/sequential_tests/fdct/: fdct.h
sw/apps/user_plugin_tests/: CMakeLists.txt
sw/apps/user_plugin_tests/apb_up_test/: CMakeLists.txt  main.c
sw/apps/user_plugin_tests/axi_up_test/: CMakeLists.txt  main.c
sw/apps/user_plugin_tests/upio_test/: CMakeLists.txt  main.c
sw/libs/sys_lib/inc/: gpio.h  int.h  pulpino.h
sw/libs/sys_lib/inc/user_plugin/: apb.h  axi.h
sw/libs/sys_lib/src/: int.c
sw/ref/: crt0.riscv.S  crt0.riscv_freertos.S
tb/: chip_top_wrapper.sv  exit_status.sv  flash_wrapper.sv  gpio_fast_test.sv  gpio_test.sv  i2c_eeprom_model.sv  if_exit_status.sv  if_spi_slave.sv  tb.sv  tb_chip_top.sv  tb_mem_pkg.sv  tb_spi_pkg.sv  upio_test.sv
vip/: vcompile.csh  vcompile_timing.csh
vip/spi_flash/: README.md
vip/spi_flash/w25q16jv/: .gitignore  SREG.TXT
vsim/: patch_modelsim_ini.py
vsim/tcl_files/: run.tcl  run_common.tcl  run_debug.tcl  run_pl.tcl
vsim/tcl_files/config/: vsim.tcl
vsim/vcompile/: build_rtl_sim.csh
vsim/vcompile/rtl/: vcompile_pulpino.sh  vcompile_tb.sh
vsim/vcompile/vip/: vcompile_vip.csh  vcompile_vip_timing.csh
